	Added --parser and --ip-ua-fields options to filterbots, allows routing input through a parser for filtering bots
	Updated logmerge to support indexed/named field-based merge-sorting when using --parser. See README for examples
	Added Histogram plot type support to logplot (--type hist)
	Added urlparse utility/API. See README for details
	
version 0.5
	Added qps utility - Parse timestamps from log stream and calculate qps over sliding time window		
	Added Prefix/Suffix matching to filterbots - Specify p'<prefix>' or s'<suffix>' in useragents file to use this feature
	Added comment support for filterbots useragents/ips files - use '#' in start of line
	Added JSONParser to parsing module, can now use JSON-formatted logs e.g for logmerge, logparse etc.
	Added --ignore flag to logparse, surpresses missing field errors and skips those lines
	Added the 'timeseries' plot type for plotting timeseries data
	Added the matplotlib plotting backend supporting pie/line/timeseries charting
	Added data/examples subdirectory, included example bots_useragents.txt files	
	Can now specify fields by field name in -f parameter for the logparse method/console script
	Can now specify multiple comma-separated field names/indices in logparse method	
	Fixed memory bug resulting from un-needed use of readlines() on file descriptors
	Changed programmatic interface for most methods to use explicit parameter naming instead of generic (opts, args)
	Updated unit-tests, examples and README to reflect most of latest functionality	
	
version 0.4
	Added unit-testing for logtools.parsers module
	Fixed small bug in GeoIP unit-testing
	Fixed small bug in logplot option parsing from configuration file
	Added logplot gchart backend 'line' chart type 
	Improved coverage of unit-testing for the plotting module
	Added support for regular expressions in bots useragents file. use r'<reg_ex>' syntax to specify a regexp line
	Added --format option for logparse, added set_format to Parser interface